Initial DeepSeek integration: stream solver responses (#578)
* maincss

* update repomap

* update hierarchy

* Create file src/server/services/deepseek.rs

* Create file src/bin/deepseek-cli.rs

* Update mod.rs

* Update Cargo.toml

* cargolock

* Create file tests/deepseek.rs

* Update deepseek.rs

* Update deepseek.rs

* Update deepseek.rs

* Update deepseek.rs

* Update deepseek.rs

* Update Cargo.toml

* cargolock

* Update deepseek.rs

* Update deepseek-cli.rs

* Update Cargo.toml

* cargolock

* Update mod.rs

* Update ws.rs

* Update Cargo.toml

* Fix DeepSeek None reasoning handling  (#576)

* Update ws.rs

* solver issue

* Update solver_ws.rs

* Update ws.rs

* Update ws.rs

* Create file src/server/services/solver/ws/mod.rs

* Create file src/server/services/solver/ws/url_parsing.rs

* Create file src/server/services/solver/ws/files_analysis.rs

* Create file src/server/services/solver/ws/solution_generation.rs

* Create file src/server/services/solver/ws/html_formatting.rs

* Delete src/server/services/solver/ws.rs

* Create file docs/solver.md

* rh

* Create file src/server/services/github_types.rs

* Update files_analysis.rs

* Update solution_generation.rs

* Update mod.rs

* Update files_analysis.rs

* Update solution_generation.rs

* Update mod.rs

* fix: Resolve Rust compilation errors in solver service

This commit addresses compilation issues in the solver service by:
- Fixing return types for analyze_files() and generate_solution()
- Simplifying callback functions to return Result<()>
- Removing unnecessary AsyncCallback type conversions

* fix: Resolve import and unused import issues in solver ws modules

* fix: Return boxed futures in solver service callbacks

* fix: Resolve Rust compilation errors in solver service

This commit addresses several compilation issues:
- Fixed github types import
- Corrected async function return types
- Remo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "openagents"
 version = "0.1.0"
 edition = "2021"
+default-run = "openagents"
 
 [lib]
 path = "src/lib.rs"
@@ -9,6 +10,10 @@ path = "src/lib.rs"
 [[bin]]
 path = "src/main.rs"
 name = "openagents"
+
+[[bin]]
+path = "src/bin/deepseek-cli.rs"
+name = "deepseek-cli"
 
 [dependencies]
 env_logger = "0.10"
@@ -47,6 +52,8 @@ hyper = { version = "1.2", features = ["full"] }
 http-body-util = "0.1"
 http = "1.0"
 tokio-stream = "0.1.17"
+clap = { version = "4.4", features = ["derive"] }
+termcolor = "1.4"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
