--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ http = "1.0"
 tokio-stream = "0.1.17"
 clap = { version = "4.4", features = ["derive"] }
 termcolor = "1.4"
+async-trait = "0.1"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
