--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ tokio-stream = "0.1.17"
 clap = { version = "4.4", features = ["derive"] }
 termcolor = "1.4"
 async-trait = "0.1"
+git2 = "0.20.0"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
