--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ clap = { version = "4.4", features = ["derive"] }
 termcolor = "1.4"
 async-trait = "0.1"
 git2 = "0.20.0"
+tree-sitter = "0.24.7"
+tree-sitter-rust = "0.23.2"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
