--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ termcolor = "1.4"
 async-trait = "0.1"
 git2 = "0.20.0"
 tree-sitter = "0.20.10"
-tree-sitter-rust = { version = "0.20.3", features = ["precompiled"] }
+tree-sitter-rust = "0.20.4"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
