--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ name = "openagents"
 path = "src/bin/deepseek-cli.rs"
 name = "deepseek-cli"
 
+[[bin]]
+path = "src/bin/repo.rs"
+name = "repo"
+
 [dependencies]
 streaming-iterator = "0.1.9"
 env_logger = "0.10"
@@ -38,6 +42,7 @@ url = "2.4"
 time = "0.3.37"
 anyhow = "1.0"
 askama = "0.12.1"
+askama_axum = "0.4.0"
 axum = { version = "0.8.1", features = ["ws", "macros"] }
 axum-extra = { version = "0.9.2", features = ["cookie"] }
 tower = "0.5.2"
