--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,12 @@ name = "openagents"
 path = "src/bin/deepseek-cli.rs"
 name = "deepseek-cli"
 
+[[bin]]
+path = "src/bin/repo.rs"
+name = "repo"
+
 [dependencies]
+streaming-iterator = "0.1.9"
 env_logger = "0.10"
 dotenvy = "0.15"
 futures = "0.3"
@@ -37,6 +42,7 @@ url = "2.4"
 time = "0.3.37"
 anyhow = "1.0"
 askama = "0.12.1"
+askama_axum = "0.4.0"
 axum = { version = "0.8.1", features = ["ws", "macros"] }
 axum-extra = { version = "0.9.2", features = ["cookie"] }
 tower = "0.5.2"
@@ -55,6 +61,9 @@ tokio-stream = "0.1.17"
 clap = { version = "4.4", features = ["derive"] }
 termcolor = "1.4"
 async-trait = "0.1"
+git2 = "0.20.0"
+tree-sitter = "0.20.10"
+tree-sitter-rust = "0.20.4"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
