--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,8 @@ async-trait = "0.1"
 git2 = "0.20.0"
 tree-sitter = "0.20.10"
 tree-sitter-rust = "0.20.4"
+colored = "2.1"
+yansi = "0.5"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
