--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,76 +2,43 @@
 name = "openagents"
 version = "0.1.0"
 edition = "2021"
-default-run = "openagents"
-
-[lib]
-path = "src/lib.rs"
-
-[[bin]]
-path = "src/main.rs"
-name = "openagents"
-
-[[bin]]
-path = "src/bin/deepseek-cli.rs"
-name = "deepseek-cli"
-
-[[bin]]
-path = "src/bin/repo.rs"
-name = "repo"
 
 [dependencies]
-streaming-iterator = "0.1.9"
-env_logger = "0.10"
-dotenvy = "0.15"
+actix = "0.13"
+actix-files = "0.6"
+actix-web = "4"
+actix-web-actors = "4.1"
+anyhow = "1.0"
+askama = { version = "0.12", features = ["with-actix-web"] }
+axum = { version = "0.7", features = ["ws"] }
+axum-extra = { version = "0.9", features = ["typed-header"] }
+base64 = "0.21"
+chrono = { version = "0.4", features = ["serde"] }
+clap = { version = "4.4", features = ["derive"] }
+colored = "2.0"
+dotenv = "0.15"
 futures = "0.3"
+futures-util = { version = "0.3", features = ["sink"] }
+git2 = "0.18"
+headers = "0.4"
+jsonwebtoken = "9.2"
+oauth2 = "4.4"
+octocrab = "0.32"
+pulldown-cmark = "0.9"
+regex = "1.10"
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde-aux = "4"
-tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
-log = "0.4"
-uuid = { version = "1.4", features = ["v4", "serde"] }
-bitcoin_hashes = "0.12"
-secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes", "global-context"] }
-chrono = "0.4"
-lazy_static = "1.4"
-sqlx = { version = "0.8.1", features = ["time", "uuid", "runtime-tokio", "postgres", "json", "tls-native-tls", "bigdecimal"] }
-config = "0.14"
-secrecy = { version = "0.8", features = ["serde"] }
-tracing = { version = "0.1", features = ["log"] }
-url = "2.4"
-time = { version = "0.3.37", features = ["serde", "serde-well-known"] }
-anyhow = "1.0"
-askama = { version = "0.12.1", features = ["with-axum"] }
-askama_axum = "0.4.0"
-axum = { version = "0.8.1", features = ["ws", "macros"] }
-axum-extra = { version = "0.9.2", features = ["cookie"] }
-tower = "0.5.2"
-tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-reqwest = { version = "0.11", features = ["json", "stream"] }
-pulldown-cmark = "0.9"
-askama_escape = "0.1"
-bytes = "1.5"
-html-escape = "0.2"
-tokio-tungstenite = "0.21"
-hyper = { version = "1.2", features = ["full"] }
-http-body-util = "0.1"
-http = "1.0"
-tokio-stream = "0.1.17"
-clap = { version = "4.4", features = ["derive"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
 termcolor = "1.4"
-async-trait = "0.1"
-git2 = "0.20.0"
-tree-sitter = "0.20.10"
-tree-sitter-rust = "0.20.4"
-colored = "2.1"
-yansi = "0.5"
-urlencoding = "2.1"
-base64 = "0.21"
+tokio = { version = "1.0", features = ["full"] }
+tokio-tungstenite = "0.20"
+tower = { version = "0.4", features = ["util"] }
+tower-http = { version = "0.5", features = ["fs", "trace"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+url = "2.5"
+uuid = { version = "1.6", features = ["serde", "v4"] }
 
 [dev-dependencies]
-tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
-serde_json = "1.0"
-lazy_static = "1.4"
-wiremock = "0.6.2"
-axum-test = "17.1"
+tempfile = "3.9"
