--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,8 @@ colored = "2.1"
 yansi = "0.5"
 urlencoding = "2.1"
 base64 = "0.21"
+thiserror = "1.0"
+tempfile = "3.10"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
