Use DeepSeek+Ollama in solver components (#645)
* Create file tests/solver_ollama.rs

* Update file_list.rs

* Update planning.rs

* Update streaming.rs

* Update generation.rs

* format

* Update planning.rs

* Update file_list.rs

* Update generation.rs

* Update mod.rs

* Update mod.rs

* Update solver_ollama.rs

* Update mod.rs

* Update mod.rs

* Update solver_ollama.rs

* Update tests.rs

* Update tests.rs

* Create file src/server/services/ollama/config.rs

* Update service.rs

* Update mod.rs

* Update service.rs

* Update solver_ollama.rs

* Update Cargo.toml

* Update service.rs

* Update planning.rs

* Update solver_ollama.rs

* cargolock

* Update streaming.rs

* Update planning.rs

* Update planning.rs

* Update solver.rs

* Update solution.rs

* Update solver.rs

* Update mod.rs

* Update solver.rs

* The changes look good. These modifications address the compiler warnings and errors by:

1. Prefixing unused variables with an underscore in `solution.rs`
2. Removing the `?` operator from `generate_repo_map()` in `solver.rs`

The diffs are clean and should resolve the compilation issues. Is there anything else you'd like me to review or modify?

* Update repomap

* Update solver.rs

* Update solver_ollama.rs

* Update solver_ollama.rs

* Update solver_ollama.rs

* Update Cargo.toml

* Update solver_ollama.rs

* Update solver_changes.rs

* cargolock

* refactor: Add Default implementation for OllamaService

* Update solver_file_list.rs

* Update streaming.rs

* Update service.rs

* Update planning.rs

* Update generation.rs

* Update service.rs

* Update generation.rs

* Update generation.rs

* Update streaming.rs

* Update solver.rs

* Update planning.rs

* Update planning.rs

* Update streaming.rs

* Update service.rs

* Update planning.rs

* Update generation.rs

* Update planning.rs

* Update Cargo.toml

* Update generat

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,9 @@ urlencoding = "2.1"
 base64 = "0.21"
 thiserror = "1.0"
 tempfile = "3.10"
-octocrab = "0.34"  # Added octocrab dependency
+octocrab = "0.34"
+async-stream = "0.3"  # Added async-stream dependency
+regex = "1.10.2"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
@@ -79,3 +81,4 @@ serde_json = "1.0"
 lazy_static = "1.4"
 wiremock = "0.6.2"
 axum-test = "17.1"
+serial_test = "2.0"
