--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,39 +2,86 @@
 name = "openagents"
 version = "0.1.0"
 edition = "2021"
+default-run = "openagents"
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "openagents"
+
+[[bin]]
+path = "src/bin/deepseek-cli.rs"
+name = "deepseek-cli"
+
+[[bin]]
+path = "src/bin/repo.rs"
+name = "repo"
 
 [dependencies]
-actix-web = "4.4.0"
-actix-files = "0.6.2"
-actix-session = { version = "0.8.0", features = ["cookie-session"] }
-actix-web-httpauth = "0.8.1"
-anyhow = "1.0.75"
-askama = "0.12.1"
-askama_actix = "0.14.0"
-base64 = "0.21.5"
-chrono = { version = "0.4.31", features = ["serde"] }
-clap = { version = "4.4.8", features = ["derive"] }
-dotenvy = "0.15.7"
-env_logger = "0.10.1"
-futures = "0.3.29"
-futures-util = "0.3.29"
-jsonwebtoken = "9.1.1"
-log = "0.4.20"
-oauth2 = "4.4.2"
+streaming-iterator = "0.1.9"
+env_logger = "0.10"
+dotenvy = "0.15"
+futures = "0.3"
+futures-util = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde-aux = "4"
+tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
+log = "0.4"
+uuid = { version = "1.4", features = ["v4", "serde"] }
+bitcoin_hashes = "0.12"
+secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes", "global-context"] }
+chrono = "0.4"
+lazy_static = "1.4"
+sqlx = { version = "0.8.1", features = ["time", "uuid", "runtime-tokio", "postgres", "json", "tls-native-tls", "bigdecimal"] }
+config = "0.14"
+secrecy = { version = "0.8", features = ["serde"] }
+tracing = { version = "0.1", features = ["log"] }
+url = "2.4"
+time = { version = "0.3.37", features = ["serde", "serde-well-known"] }
+anyhow = "1.0"
+askama = { version = "0.12.1", features = ["with-axum"] }
+askama_axum = "0.4.0"
+axum = { version = "0.8.1", features = ["ws", "macros"] }
+axum-extra = { version = "0.9.2", features = ["cookie"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
+pulldown-cmark = "0.9"
+askama_escape = "0.1"
+bytes = "1.5"
+html-escape = "0.2"
+tokio-tungstenite = "0.21"
+hyper = { version = "1.2", features = ["full"] }
+http-body-util = "0.1"
+http = "1.0"
+tokio-stream = "0.1.17"
+clap = { version = "4.4", features = ["derive"] }
+termcolor = "1.4"
+async-trait = "0.1"
+git2 = "0.20.0"
+tree-sitter = "0.20.10"
+tree-sitter-rust = "0.20.4"
+colored = "2.1"
+yansi = "0.5"
+urlencoding = "2.1"
+base64 = "0.21"
+thiserror = "1.0"
+tempfile = "3.10"
+octocrab = "0.34"
+async-stream = "0.3"
 regex = "1.10.2"
-reqwest = { version = "0.11.22", features = ["json", "stream"] }
-serde = { version = "1.0.192", features = ["derive"] }
-serde_json = "1.0.108"
-sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
-tempfile = "3.8.1"
-tokio = { version = "1.34.0", features = ["full"] }
-tokio-stream = "0.1.14"
-tokio-util = "0.7.10"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-url = "2.4.1"
-uuid = { version = "1.5.0", features = ["v4", "serde"] }
+ignore = "0.4"  # Added ignore crate for .gitignore support
+glob = "0.3"    # Added glob crate for pattern matching
 mockito = "1.2.0"
 
 [dev-dependencies]
-serial_test = "2.0.0"
+tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
+serde_json = "1.0"
+lazy_static = "1.4"
+wiremock = "0.6.2"
+axum-test = "17.1"
+serial_test = "2.0"
