--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ axum-extra = { version = "0.9.2", features = ["cookie"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
+reqwest = { version = "0.11", features = ["json", "stream", "multipart", "blocking"] }
 pulldown-cmark = "0.9"
 askama_escape = "0.1"
 bytes = "1.5"
