--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ async-stream = "0.3"
 regex = "1.10.2"
 ignore = "0.4"  # Added ignore crate for .gitignore support
 glob = "0.3"    # Added glob crate for pattern matching
+serde_urlencoded = "0.7.1"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
