--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ name = "repo"
 path = "src/bin/transcribe.rs"
 name = "transcribe"
 
+[features]
+local-tests = []
+
 [dependencies]
 streaming-iterator = "0.1.9"
 env_logger = "0.10"
