Implement signup form handler and OIDC redirect (#656)
* Update auth.rs

* Update config.rs

* Update auth.rs

* Update config.rs

* Update auth.rs

* Update auth.rs

* Update mod.rs

* Update config.rs

* Update auth.rs

* Update config.rs

* Update oidc_client.rs

* Update auth.rs

* Update auth.rs

* Update auth.rs

* Update auth.rs

* Update config.rs

* Update .env.example

* css

* Update repomap

* Update auth.rs

* Update auth.rs

* format

* format

* Update auth.rs

* Update auth.rs

* Update oidc_signup.rs

* Update mod.rs

* Update config.rs

* Update config.rs

* Update mod.rs

* Update auth.rs

* Update auth_error_handling.rs

* Update oidc_client.rs

* Update user.rs

* Update oidc_client.rs

* Update auth_error_handling.rs

* Update user.rs

* Update signup_flow.rs

* Update auth_error_handling.rs

* Update oidc_client.rs

* Update Cargo.toml

* Update signup_flow.rs

* cargolock

* unfuck cargo toml

* Update auth_error_handling.rs

* Update oidc_client.rs

* Update auth_error_handling.rs

* cargo tomllock

* Update config.rs

* Update auth_error_handling.rs

* Update auth.rs

* Update auth_error_handling.rs

* Update auth_error_handling.rs

* Update config.rs

* Update auth_error_handling.rs

* Update config.rs

* Update auth_error_handling.rs

* Update oidc_client.rs

* Update auth.rs

* Update auth_error_handling.rs

* Update repomap

* Update auth_pages.rs

* Update repomap

* Update config.rs

* Update auth.rs

* Update auth.rs

* Update auth.rs

* Update oidc_client.rs

* hm

* Update auth.rs

* Update auth.rs

* Update oidc_client.rs

* Update mod.rs

* Update config.rs

* Update config.rs

* Update auth.rs

* Update oidc_client.rs

* Update config.rs

* Update auth.rs

* Update routes.rs

* Update mod.rs

* Update mod.rs

* Update config.rs

* Update mod.rs

* Update transport

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -25,6 +25,11 @@ jobs:
       DATABASE_URL: "postgres://postgres:password@localhost:5432/openagents_test"
       AIDER_API_KEY: ${{ secrets.AIDER_API_KEY }}
       DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+      OIDC_CLIENT_ID: ${{ secrets.OIDC_CLIENT_ID }}
+      OIDC_CLIENT_SECRET: ${{ secrets.OIDC_CLIENT_SECRET }}
+      OIDC_AUTH_URL: ${{ secrets.OIDC_AUTH_URL }}
+      OIDC_TOKEN_URL: ${{ secrets.OIDC_TOKEN_URL }}
+      OIDC_REDIRECT_URI: ${{ secrets.OIDC_REDIRECT_URI }}
       GITHUB_TOKEN: ${{ github.token }}
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
     services:
@@ -111,7 +116,7 @@ jobs:
           # Verify environment setting
           echo "APP_ENVIRONMENT=$APP_ENVIRONMENT"
           # Run tests with environment tracing
-          RUST_LOG=debug cargo test -- --nocapture
+          RUST_LOG=debug cargo test --features local-tests -- --nocapture
 
       - name: Check that queries are fresh
         env:
@@ -156,6 +161,11 @@ jobs:
       AIDER_API_KEY: ${{ secrets.AIDER_API_KEY }}
       DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
       GITHUB_TOKEN: ${{ github.token }}
+      OIDC_CLIENT_ID: ${{ secrets.OIDC_CLIENT_ID }}
+      OIDC_CLIENT_SECRET: ${{ secrets.OIDC_CLIENT_SECRET }}
+      OIDC_AUTH_URL: ${{ secrets.OIDC_AUTH_URL }}
+      OIDC_TOKEN_URL: ${{ secrets.OIDC_TOKEN_URL }}
+      OIDC_REDIRECT_URI: ${{ secrets.OIDC_REDIRECT_URI }}
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
     services:
       postgres:
@@ -242,7 +252,7 @@ jobs:
         run: |
           echo "APP_ENVIRONMENT=production" >> $GITHUB_ENV
           echo "APP_ENVIRONMENT=$APP_ENVIRONMENT"
-          RUST_LOG=debug cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
+          RUST_LOG=debug cargo llvm-cov --features local-tests --all-features --workspace --lcov --output-path lcov.info
 
       - name: Generate report
         run: cargo llvm-cov report --html --output-dir coverage
